[package]
name = "rn-xlsx2csv"
version = "0.1.0"
authors = ["Ruslan Nasonov <rus.nasonov@gmail.com>"]
edition = "2018"
description = "Fast xlsx to csv converter"
repository = "https://github.com/rusnasonov/xlsx2csv"
license = "WTFPL"

[dependencies]
zip = "0.5"
csv = "1.1"
quick-xml = "0.17"
clap = "2.33.0"

[[bin]]
name = "xlsx2csv"
path = "src/main.rs"
